tests/snapshots/examples_fixtures/diagnostics_demos__hint_demos__function_arg_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/hint_demos/function_arg_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E056]: Wrong Number Of Arguments

The `add` function takes 2 arguments, but 3 were provided.

  examples/diagnostics_demos/hint_demos/function_arg_mismatch.flx:17:15
   |
 4 | fn add(a, b) {
 5 |     a + b
 6 | }
 7 | 
 8 | fn multiply(x, y, z) {
... |
15 | 
16 | 
17 | let result3 = add(1, 2, 3);
   |               ^^^^^^^^^^^^
   |               ------------ 3 arguments provided here, expected 2

Help:
  Remove 1 extra argument(s), for example: `add(arg1, arg2)`.
== stdout ==
<not executed>
