tests/snapshots/examples_fixtures/diagnostics_demos__hint_demos__multi_file_lib.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/hint_demos/multi_file_lib.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
