tests/snapshots/examples_fixtures/diagnostics_demos__hint_demos__shadowing_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/hint_demos/shadowing_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
