tests/snapshots/examples_fixtures/diagnostics_demos__hint_demos__unknown_operator.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/hint_demos/unknown_operator.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
